01-platform-infra/infrastructure/vault/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    nginx:ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: vault.ecommerce.local
    http:
      paths:  
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
